fix: graduate title alignment

--- a/assets/css/blocks/core/group.css
+++ b/assets/css/blocks/core/group.css
@@ -190,3 +190,11 @@
 	z-index: 50;
 	background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg xmlns='http://www.w3.org/2000/svg' version='1.1' viewBox='0 0 235.6 207.59'%3E%3Cdefs%3E%3Cstyle%3E .cls-1 %7B fill: %23e52923; %7D %3C/style%3E%3C/defs%3E%3C!-- Generator: Adobe Illustrator 28.7.9, SVG Export Plug-In . SVG Version: 1.2.0 Build 218) --%3E%3Cg%3E%3Cg id='Calque_1'%3E%3Cpath class='cls-1' d='M189.51,86.91c0,34.57-34.67,79.17-73.34,79.17s-70.03-28.03-70.03-62.6,31.35-62.6,70.03-62.6,73.34,11.45,73.34,46.02Z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
+
+.mp-align-top {
+	align-items: baseline;
+}
+
+.mp-align-top > p {
+	word-break: keep-all;
+}
